--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,11 @@
         "moduleResolution": "node",
         "esModuleInterop": true,
         "jsx": "react",
-    }
+    },
+    "include": [
+        "src",
+        ".eslintrc.js",
+        "webpack.config.js",
+        "postcss.config.js"
+    ]
 }
