--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^7.2.4",
     "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^8.3.2",
     "style-loader": "^3.3.2",
     "terser-webpack-plugin": "^5.3.7",
+    "thread-loader": "^4.0.1",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.79.0",
