--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
         "src",
         ".eslintrc.js",
         "webpack.config.js",
-        "postcss.config.js"
+//        "postcss.config.js"
     ]
 }
