--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@craftjs/core": "^0.2.0-beta.10",
     "antd": "^5.4.2",
+    "axios": "^1.3.6",
     "lodash": "^4.17.21",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
@@ -27,6 +28,7 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.58.0",
     "autoprefixer": "^10.4.14",
@@ -47,6 +49,8 @@
     "eslint-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^5.5.1",
     "husky": "^8.0.3",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.5",
     "postcss": "^8.4.22",
     "postcss-flexbugs-fixes": "^5.0.2",
