--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@craftjs/core": "^0.2.0-beta.10",
     "antd": "^5.4.2",
     "axios": "^1.3.6",
+    "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
