--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "mobx-react": "^7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-transition-group": "^4.4.5",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
