--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.10.0",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
