--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "react-hello",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "build": "webpack",
     "start": "webpack serve --env development",
@@ -21,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
+    "@tanstack/react-query": "^4.29.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-transition-group": "^4.4.5",
