--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@craftjs/core": "^0.2.0-beta.10",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.29.7",
     "antd": "^5.4.2",
     "axios": "^1.3.6",
     "classnames": "^2.3.2",
@@ -20,7 +22,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
-    "@tanstack/react-query": "^4.29.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-transition-group": "^4.4.5",
