--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,18 @@
 {
-    "compilerOptions": {
-        "target": "es2015",
-        "module": "esnext",
-        "lib": [
-            "dom",
-            "esnext"
-        ],
-        "moduleResolution": "node",
-        "esModuleInterop": true,
-        "jsx": "react",
-    },
-    "include": [
-        "src",
-        ".eslintrc.js",
-        "webpack.config.js",
-    ]
+  "compilerOptions" : {
+    "target" : "es2015",
+    "module" : "esnext",
+    "lib" : [
+      "dom",
+      "esnext"
+    ],
+    "moduleResolution" : "node",
+    "esModuleInterop" : true,
+    "jsx" : "react"
+  },
+  "include" : [
+    "src",
+    ".eslintrc.js",
+    "webpack.config.js"
+  ]
 }
