--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-transition-group": "^4.4.5",
+    "reactcss": "^1.2.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.10"
@@ -39,8 +41,10 @@
     "@babel/runtime": "^7.21.0",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.35",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.11",
     "@types/react-transition-group": "^4.4.5",
+    "@types/reactcss": "^1.2.6",
     "@types/styled-components": "^5.1.26",
     "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
