--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,16 @@
     ],
     "moduleResolution" : "node",
     "esModuleInterop" : true,
-    "jsx" : "react"
+    "jsx" : "react",
+    "baseUrl": ".",
+    "paths": {
+      "@": [
+        "src"
+      ],
+      "@/*": [
+        "src/*"
+      ]
+    },
   },
   "include" : [
     "src",
