1. prettier 格式化代码。

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint": "^8.0.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -83,6 +84,7 @@
     "postcss-loader": "^7.2.4",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^8.3.2",
+    "prettier": "2.8.8",
     "style-loader": "^3.3.2",
     "terser-webpack-plugin": "^5.3.7",
     "thread-loader": "^4.0.1",
