--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,16 @@
 {
-  "compilerOptions" : {
-    "target" : "es2015",
-    "module" : "esnext",
-    "lib" : [
-      "dom",
-      "esnext"
-    ],
-    "moduleResolution" : "node",
-    "esModuleInterop" : true,
-    "jsx" : "react",
+  "compilerOptions": {
+    "target": "es2015",
+    "module": "esnext",
+    "lib": ["dom", "esnext"],
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "jsx": "react",
     "baseUrl": ".",
     "paths": {
-      "@": [
-        "src"
-      ],
-      "@/*": [
-        "src/*"
-      ]
-    },
+      "@": ["src"],
+      "@/*": ["src/*"]
+    }
   },
-  "include" : [
-    "src",
-    ".eslintrc.js",
-    "webpack.config.js"
-  ]
+  "include": ["src", ".eslintrc.js", "webpack.config.js"]
 }
