--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint": "eslint ./src --fix"
   },
   "dependencies": {
+    "@ant-design/pro-components": "^2.6.2",
     "@craftjs/core": "^0.2.0-beta.10",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.7",
